manifest/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-4-deployment
  namespace: dev
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: group-4-app
  template:
    metadata:
      labels:
        app: group-4-app
    spec:
      containers:
        - name: group-4-app
          image: 'ghcr.io/the-cloud-camp/project-demo:1.0.3'
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
