manifest/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: group-4-service
  namespace: dev
spec:
  selector:
    app: group-4-app
  ports:
  - port: 3000
    targetPort: 3000
